<resources>

    <drawable name="clr_normal">#1bb5db</drawable>
    <drawable name="clr_pressed">#ff6501</drawable>


    <string name="app_name">万和扫描</string>

    <string name="app_title">陕西通汇汽车物流条码采集</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">用户登录</string>
    <string name="login_name">用户名</string>
    <string name="login_psw">密  码</string>

    <string name="login_but">登录</string>

    <string name="order_number">订单号</string>
    <string name="hopper_num">料箱号</string>
    <string name="order_list">订单</string>

    <string name="oper_number">操作员</string>

    <string name="sptm">看板扫描</string>
    <string name="hopper_title">料箱</string>
    <string name="hopper_number">数量</string>
    <string name="hopper_grouping">拉动分组</string>
    <string name="choice_yes">是</string>
    <string name="choice_no">否</string>

    <string name="choice_submit">提交数据</string>
    <string name="choice_urgency">是否紧急</string>
    <string name="choice_debug">是否调试</string>
    <string name="choice_time">需求时间</string>
    <string name="title_activity_list_show">ListShowActivity</string>
    <string name="title_activity_choice_num">ChoiceNumActivity</string>
    <string name="title_activity_hopper_updata">HopperUpdataActivity</string>
</resources>
