<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:background="@drawable/bamb"
    >


    <TextView
           android:text="@string/app_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1bb5db"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"

            android:text="@string/login_name"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/login_psw"

            android:textSize="17sp" />

        <EditText
            android:id="@+id/login_psw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"

            android:textSize="20sp"
            android:gravity="center"

            android:textStyle="bold" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button

            android:id="@+id/login_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_but"
            android:background="@drawable/login_button_selector"
            android:textSize="17sp" />


    </LinearLayout>

</LinearLayout>