<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bamb"
    android:orientation="vertical" >



        <TextView
            android:id="@+id/showtxt"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="300dp"
            android:textColor="#000000"
            android:gravity="center_horizontal|center_vertical"
            android:layout_height="100dp" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/choice_urgency"

            android:textSize="17sp" />
        <RadioGroup
            android:id="@+id/urgency"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"

           >
            <RadioButton
                android:layout_marginLeft="10dp"
                android:id="@+id/urgency_yes"
                android:textSize="20sp"
                android:text="@string/choice_yes" />
            <RadioButton
                android:layout_marginLeft="30dp"
                android:id="@+id/urgency_no"
                android:textSize="20sp"
                android:text="@string/choice_no" />
        </RadioGroup>


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/choice_debug"

            android:textSize="17sp" />
        <RadioGroup
            android:id="@+id/debug"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"

            >
            <RadioButton
                android:layout_marginLeft="10dp"
                android:id="@+id/debug_yes"
                android:textSize="20sp"
                android:text="@string/choice_yes" />
            <RadioButton
                android:layout_marginLeft="30dp"
                android:id="@+id/debug_no"
                android:textSize="20sp"
                android:text="@string/choice_no" />
        </RadioGroup>


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/choice_time"

            android:textSize="17sp" />
        <Button
            android:background="@drawable/login_button_selector"
            android:id="@+id/datePicker"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="选择日期"/>
        <Button
            android:background="@drawable/login_button_selector"
            android:id="@+id/timePicker"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="选择时间"/>


    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/hopper_grouping"
            android:textSize="17sp" />

        <Spinner
            android:id="@+id/check_picstr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="90dp"

            />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />

    <Button
        android:id="@+id/butHopper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button_selector"
        android:gravity="center"
        android:text="@string/sptm" />

</LinearLayout>