<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#1bb5db">

        <ImageButton
            android:id="@+id/hopperBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/back"
            android:background="#1bb5db"/>
        <TextView
            android:id="@+id/showExtra"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="210dp"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:gravity="center_horizontal|center_vertical"
            android:layout_height="wrap_content" />
        <Button
            android:background="@drawable/login_button_selector"
            android:id="@+id/submit"
            android:layout_marginLeft="30dp"

            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="提交数据"
            android:textColor="#ffffff"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/order_list"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editOrderNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/hopper_title"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/hopperNum"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center"
            android:inputType="number"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- android:hint="扫描到的条码号" -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hopper_number"

            android:textSize="17sp" />

        <EditText
            android:id="@+id/hopperUpdata"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:text="1"
            android:textSize="20sp"
            android:gravity="center"

            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />




    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
    <TextView
        android:paddingLeft="0dp"
        android:paddingRight="10dp"
        android:layout_marginLeft="0dp"
        android:layout_width="150dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/order_number"
        />
    <TextView

        android:layout_width="150dp"
        android:layout_marginLeft="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/hopper_num"
        android:gravity="center_horizontal"/>
    <TextView


        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/hopper_number"
        android:gravity="center_horizontal"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cecece" />
    <ListView
        android:layout_marginTop="20dp"
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
